--- a/src/main.scss
+++ b/src/main.scss
@@ -47,8 +47,19 @@ ul.affixes li {
   padding: 0;
   border: 0;
 }
+td ul.affixes {
+  margin: 0;
+}
 ul.affixes {
   padding-left: 0;
   margin: 1em;
   margin-left: 0;
+}
+th.sticky {
+  position: sticky;
+  top: 0;
+  background: $body-bg;
+}
+.nowrap {
+  white-space: nowrap;
 }
