--- a/src/main.scss
+++ b/src/main.scss
@@ -74,3 +74,10 @@ th.sticky {
   height: 1em;
   max-width: 1.5em;
 }
+img.skill-icon {
+  height: 6em;
+  border-radius: 1em;
+}
+img.skill {
+  border-radius: 1em;
+}
