item affix grouping

--- a/src/main.scss
+++ b/src/main.scss
@@ -81,3 +81,9 @@ img.skill-icon {
 img.skill {
   border-radius: 1em;
 }
+.collapse-caret {
+  float: left;
+  margin-left: -0.6em;
+  // width: 1.5em;
+  line-height: 1.5;
+}
