--- a/src/main.scss
+++ b/src/main.scss
@@ -87,3 +87,24 @@ img.skill {
   // width: 1.5em;
   line-height: 1.5;
 }
+.passive-range {
+  border-radius: 0.2em;
+  background-color: rgba(0,255,0,.3);
+  display: inline;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+}
+.passive-melee {
+  border-radius: 0.2em;
+  background-color: rgba(255,0,0,.3);
+  display: inline;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+}
+.passive-magic {
+  border-radius: 0.2em;
+  background-color: rgba(255,0,255,.3);
+  display: inline;
+  padding-left: 0.2em;
+  padding-right: 0.2em;
+}
