--- a/src/main.scss
+++ b/src/main.scss
@@ -70,6 +70,9 @@ th.sticky {
   // transform: scale(0.3);
   // width: 30%;
 }
+.gem-icon {
+  height: 2em;
+}
 .item-icon {
   height: 1em;
   max-width: 1.5em;
