--- a/src/main.scss
+++ b/src/main.scss
@@ -111,3 +111,11 @@ img.skill {
   padding-left: 0.2em;
   padding-right: 0.2em;
 }
+img.item-list-img {
+  max-width: 100%;
+  max-height: 12em;
+}
+img.unique-list-img {
+  max-width: 100%;
+  max-height: 20em;
+}
