skill-variant numbers

--- a/src/main.scss
+++ b/src/main.scss
@@ -84,6 +84,9 @@ img.skill-icon {
 img.skill {
   border-radius: 1em;
 }
+img.skill-variant {
+  height: 5em;
+}
 .collapse-caret {
   float: left;
   margin-left: -0.6em;
