--- a/src/main.scss
+++ b/src/main.scss
@@ -60,6 +60,11 @@ th.sticky {
   top: 0;
   background: $body-bg;
 }
+.loading-alert {
+  position: sticky;
+  top: 0;
+  z-index: 99;
+}
 .nowrap {
   white-space: nowrap;
 }
